fix: remove scope styling for better readability on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -30,8 +30,3 @@
 .projects-icon img {
     max-width: 50%;
 }
-
-.scope {
-    display: flex;
-    justify-content: space-between;
-}
